[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>"]
name = "leb128"
version = "0.2.5"
edition = "2018"

description = "Read and write DWARF's \"Little Endian Base 128\" (LEB128) variable length integer encoding."

license = "MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["LEB128", "DWARF", "variable", "length", "encoding"]
documentation = "https://docs.rs/leb128"
repository = "https://github.com/gimli-rs/leb128"
exclude = ["/.travis.yml", "/.coveralls.yml", "/format"]

[dependencies]

[dev-dependencies]
quickcheck = "1.0.3"

[features]
nightly = []
